Initial commit 2 to build the site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import FinalCTASection from '../components/FinalCTASection.astro';
     </div>
   </section>
 
-  {/* --- Final CTA Section --- */}
+  {/* ---- Final CTA Section ---- */}
   <section class="final-cta-wrapper section-padding">
     <div class="container">
       <FinalCTASection />
