--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,7 @@ import '../styles/global.css'; // Importamos los estilos globales
 // Por ahora, solo el título de la página
 export interface Props {
 	title: string;
+	description?: string; 
 }
 
 // Obtenemos el valor de la prop 'title' que nos pasará la página
