Deploy sin cambios para regenerar el site

--- a/src/pages/tools.astro
+++ b/src/pages/tools.astro
@@ -1,5 +1,5 @@
 ---
-// src/pages/tools.astro
+// src/pages/tools.astro.
 import Layout from '../layouts/Layout.astro'; // Ajusta ruta
 import ToolCard from '../components/ToolCard.astro'; // Ajusta ruta
 import { Icon } from 'astro-icon/components';
